<resources>
    <string name="app_name">ShoppingListApp</string>
    <string name="title_activity_products_list">ProductsListActivity</string>
    <string name="MainLabel">APLIKACJA "LISTA ZAKUPÓW"</string>
    <string name="MyShoppingListButton">MOJA LISTA ZAKUPÓW</string>
    <string name="OptionsButton">OPCJE</string>
    <string name="ExitButton">WYJDŹ</string>
    <string name="SettingsLabel">USTAWIENIA</string>
    <string name="ThemeLabel">Motyw:</string>
    <string name="DarkRadio">Ciemny</string>
    <string name="WhiteRadio">Jasny</string>
    <string name="ApplyChangesButton">ZATWIERDŹ ZMIANY</string>
    <string name="AddProductButton">DODAJ PRODUKT</string>
    <string name="AddShopButton">DODAJ SKLEP</string>
    <string name="ClearListButton">WYCZYŚĆ LISTĘ</string>
    <string name="ListLabel">Lista produktów</string>
    <string name="ListOfShopsLabel">Lista sklepów</string>
    <string name="ProductNameLabel">Nazwa produktu</string>
    <string name="ShopNameLabel">Nazwa sklepu</string>
    <string name="PriceLabel">Cena [zł]</string>
    <string name="AmountLabel">Ilość</string>
    <string name="isBoughtLabel">Czy produkt już kupiony?</string>
    <string name="deleteProductMenu">USUŃ PRODUKT</string>
    <string name="deleteShopMenu">USUŃ SKLEP</string>
    <string name="updateProductMenu">EDYTUJ PRODUKT</string>
    <string name="onListClearMessage">Wyczyszczono listę</string>
    <string name="onProductDeleteMessage">Usunięto produkt</string>
    <string name="onShopDeleteMessage">Usunięto sklep</string>
    <string name="onProductUpdateMessage">Zaaktualizowano produkt</string>
    <string name="onProductAddMessage">Dodano produkt</string>
    <string name="onShopAddMessage">Dodano sklep</string>
    <string name="CancelButton">Anuluj</string>
    <string name="ConfirmButton">Zatwierdź</string>
    <string name="MissingProductName">Nie wprowadziłeś nazwy produktu!</string>
    <string name="MissingShopName">Nie wprowadziłeś nazwy sklepu!</string>
    <string name="MissingRadius">Nie wprowadziłeś promienia!</string>
    <string name="EmailLabel">Email</string>
    <string name="PasswordLabel">Hasło</string>
    <string name="EmptyCredentialsMessage">Błąd! Uzupełnij wszystkie pola</string>
    <string name="LoginButtonLabel">ZALOGUJ</string>
    <string name="CreateAccountButtonLabel">ZAŁÓŻ KONTO</string>
    <string name="AutorisationFailedMessage">Nieprawidłowy email lub hasło</string>
    <string name="LoginLabel">Login</string>
    <string name="RepeatPasswordEditLabel">Powtórz hasło</string>
    <string name="RegisterUserDialogLabel">Zarejestruj się</string>
    <string name="PasswordTooShort">Hasło powinno mieć co najmniej 6 znaków</string>
    <string name="DifferentPasswords">Wpisane hasła różnią się</string>
    <string name="InvalidEmailFormat">Niewłaściwy format adresu email</string>
    <string name="RegisterError">Nieznany błąd podczas tworzenia konta. Spróbuj ponownie za kilka minut.</string>
    <string name="RegisterSuccessfull">Udało się stworzyć nowe konto. Możesz się zalogować!</string>
    <string name="LoggedAs">Zalogowano jako: </string>
    <string name="LogoutButtonLabel">Wyloguj</string>
    <string name="YesButton">Tak</string>
    <string name="LoggingOutDialogTitle">Wylogowywanie</string>
    <string name="LoggingOutDialogMessage">Czy na pewno chcesz się wylogować?</string>
    <string name="MapButtonLabel">Mapa sklepów</string>
    <string name="ShopsListButtonLabel">Lista ulubionych sklepów</string>
    <string name="DescriptionLabel">Opis</string>
    <string name="RadiusLabel">Promień [m]</string>
    <string name="LatitudeLabel">Szerokość geograficzna</string>
    <string name="LongitudeLabel">Długość geograficzna</string>
    <string name="LatLabel">sz:</string>
    <string name="LongLabel">dł:</string>
    <string name="NoPermissionsError">Nie masz uprawnień do lokalizacji!</string>
    <string name="ChannelName">GeofenceNotification</string>
    <string name="ChannelID">GeofenceNotificationID</string>
    <string name="ChannelDescription">Kanał do informowania o wyjściu/wejściu do geofence</string>
    <string name="Welcome">Witamy w sklepie</string>
    <string name="Goodbye">Do zobaczenia ponownie w sklepie</string>
    <string name="SubtitleWelcome">Sprawdź nowe promocje!</string>
    <string name="SubtitleGoodbye">Mamy nadzieję, że wizyta była udana!</string>
</resources>