<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/LoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/LoginLabel" />

    <EditText
        android:id="@+id/emailEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LoginEditText"
        android:layout_alignParentStart="true"
        android:hint="@string/EmailLabel"
        android:inputType="text" />

    <EditText
        android:id="@+id/passwordEditText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailEditText2"
        android:layout_alignParentStart="true"
        android:hint="@string/PasswordLabel"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/repeatPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText2"
        android:layout_alignParentStart="true"
        android:hint="@string/RepeatPasswordEditLabel"
        android:inputType="textPassword" />

</RelativeLayout>