<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/ProductNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ProductNameLabel" />

    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ProductNameEditText"
        android:layout_alignParentStart="true"
        android:hint="@string/PriceLabel"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/priceEditText"
        android:layout_alignParentStart="true"
        android:hint="@string/AmountLabel"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/amountEditText"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/isBoughtLabel"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/isBoughtCheckBoxD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.5" />

    </LinearLayout>

</RelativeLayout>