<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="@string/ListLabel"
        android:textColor="#FFAF0E0E"
        android:textSize="35sp"
        android:textStyle="bold|italic" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="6">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5" />

        <Button
            android:id="@+id/addProductButton"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFAF0E0E"
            android:text="@string/AddProductButton"
            android:textSize="15dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5" />

        <Button
            android:id="@+id/clearListButton"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#FFAF0E0E"
            android:text="@string/ClearListButton"
            android:textSize="15dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5" />

    </LinearLayout>
</LinearLayout>