<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Activities.MainActivity">

    <Button
        android:id="@+id/optionsButton"
        android:layout_width="232dp"
        android:layout_height="56dp"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:backgroundTint="#AF0E0E"
        android:onClick="onSettingButtonClickMethod"
        android:text="@string/OptionsButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="232dp"
        android:layout_height="56dp"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:backgroundTint="#FFAF0E0E"
        android:onClick="onExitButtonClickMethod"
        android:text="@string/ExitButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

    <Button
        android:id="@+id/myListButton"
        android:layout_width="232dp"
        android:layout_height="56dp"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:backgroundTint="#FFAF0E0E"
        android:onClick="onMyListButtonClickMethod"
        android:text="@string/MyShoppingListButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.619" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="150dp"
        android:layout_height="157dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/list" />

    <TextView
        android:id="@+id/textView"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="324dp"
        android:layout_height="89dp"
        android:layout_marginTop="220dp"
        android:fontFamily="serif"
        android:text="@string/MainLabel"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>